@@ -6,7 +6,7 @@ $Id$
 
 #typo3-side-menu {
 	background: #dddddd;
-	background-image: url('../../images/backgrounds/module-menu-right.png');
+	background-image: url('../../images/backgrounds/module-menu-right.gif');
 	background-position: right top;
 	background-repeat: repeat-y;
 }
